fixed overflowX on mobile

--- a/dragonEggGame/assets/css/style.css
+++ b/dragonEggGame/assets/css/style.css
@@ -1054,6 +1054,9 @@ html {
   }
 }
 @media only screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
   .hero-navigation-menu {
     width: 50vw;
   }
