--- a/dragonEggGame/assets/css/wpstyle.css
+++ b/dragonEggGame/assets/css/wpstyle.css
@@ -165,6 +165,9 @@ article .article-content {
 }
 
 @media only screen and (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+  }
   #block-whitepaper {
     /* border: 1px solid rgb(0, 94, 23); */
     padding: 1rem 50px;
